public interface Algorithm {
    public void startAlgorithm();
    public void printResult();
}
